<resources>
    <string name="app_name">English Test</string>
    <!---login activity string-->
    <string name="forget_password"><i>Quên mật khẩu?</i></string>
    <string name="sign_up"><b>Đăng ký</b></string>
    <string name="login">Đăng nhập</string>
    <string name="or">hoặc</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="return_login">Trở về đăng nhập</string>

    <!--Main activity- MENU TOOLBAR-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_next">Next</string>
    <string name="logo_desc">App logo</string>

    <!-- Nav   sdsaddsd -->
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
